--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ target_link_options(baremetal_arm PRIVATE "-T${LINKER_SCRIPT}"
         "-nostartfiles")
 
 set(CPU_FLAGS "-mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Wall")
-set(CMAKE_C_FLAGS "${CPU_FLAGS} -g -Werror -Wdiscarded-qualifiers")
+set(CMAKE_C_FLAGS "${CPU_FLAGS} -g -Wdiscarded-qualifiers")
+set(CMAKE_CXX_FLAGS "${CPU_FLAGS} -g -DNO_NORETURN")
 #set(CMAKE_EXE_LINKER_FLAGS "-T ${CMAKE_SOURCE_DIR}/startup/linker.ld -Wl,-Map=${CMAKE_BINARY_DIR}/${APP_TARGET}.map ${CPU_FLAGS} --specs=nosys.specs" CACHE INTERNAL "")
 
 set(CMAKE_EXE_LINKER_FLAGS "--specs=nosys.specs" CACHE INTERNAL "")
@@ -45,12 +46,12 @@ target_include_directories(${APP_TARGET}
 
 target_sources(${APP_TARGET}
         PRIVATE
-        src/main.c
+        src/main.cpp
         src/delay.c
-        src/bsp.c
-        src/shape.c
+        src/bsp.cpp
+        src/shape.cpp
         core/system_stm32f4xx.c
-        startup/startup.c
+        startup/startup.cpp
 )
 
 # Post-build step to generate binary
