l29(OOP_CPP): Treat warnings as errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ target_link_options(baremetal_arm PRIVATE "-T${LINKER_SCRIPT}"
         "-nostartfiles")
 
 set(CPU_FLAGS "-mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Wall")
-set(CMAKE_C_FLAGS "${CPU_FLAGS} -g -Wdiscarded-qualifiers")
+set(CMAKE_C_FLAGS "${CPU_FLAGS} -g -Werror -Wdiscarded-qualifiers")
 set(CMAKE_CXX_FLAGS "${CPU_FLAGS} -g -DNO_NORETURN")
 #set(CMAKE_EXE_LINKER_FLAGS "-T ${CMAKE_SOURCE_DIR}/startup/linker.ld -Wl,-Map=${CMAKE_BINARY_DIR}/${APP_TARGET}.map ${CPU_FLAGS} --specs=nosys.specs" CACHE INTERNAL "")
 
