--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
       - f/config_github_actions
-  pull-request:
+  pull_request:
     branches:
       - main
       - f/config_github_actions
