--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - f/config_github_actions
   pull_request:
     branches:
       - main
@@ -18,6 +17,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Initialize and Update Submodules
+        run: |
+          git submodule update --init --force --depth=1
 
       - name: Install ARM GCC
         run: |
