--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,10 @@ target_include_directories(${APP_TARGET}
         PRIVATE
         include/
         include/cmsis
+        include/cmsis/m-profile
+        qpc/3rd_party/uC-OS2/Source
+        qpc/3rd_party/uC-OS2/Cfg/Template
+        qpc/3rd_party/uC-OS2/Ports/ARM-Cortex-M/ARMv7-M/ARM
 )
 
 target_sources(${APP_TARGET}
@@ -52,6 +56,20 @@ target_sources(${APP_TARGET}
         src/rectangle.c
         core/system_stm32f4xx.c
         startup/startup.c
+        qpc/3rd_party/uC-OS2/Source/os_core.c
+        qpc/3rd_party/uC-OS2/Source/os_flag.c
+        qpc/3rd_party/uC-OS2/Source/os_mbox.c
+        qpc/3rd_party/uC-OS2/Source/os_mem.c
+        qpc/3rd_party/uC-OS2/Source/os_mutex.c
+        qpc/3rd_party/uC-OS2/Source/os_q.c
+        qpc/3rd_party/uC-OS2/Source/os_sem.c
+        qpc/3rd_party/uC-OS2/Source/os_task.c
+        qpc/3rd_party/uC-OS2/Source/os_time.c
+        qpc/3rd_party/uC-OS2/Source/os_tmr.c
+#        qpc/3rd_party/uC-OS2/Cfg/Template/app_hooks.c
+        qpc/3rd_party/uC-OS2/Ports/ARM-Cortex-M/ARMv7-M/ARM/os_cpu_a.asm
+        qpc/3rd_party/uC-OS2/Ports/ARM-Cortex-M/ARMv7-M/ARM/os_dbg.c
+        qpc/3rd_party/uC-OS2/Ports/ARM-Cortex-M/ARMv7-M/os_cpu_c.c
 )
 
 # Post-build step to generate binary
